Fix overflow property for row component

--- a/src/app_v3.0/styles/module.css
+++ b/src/app_v3.0/styles/module.css
@@ -36,7 +36,7 @@
 }
 
 .pb-row-content {
-    padding: 0 15px;
+    padding: 0;
 }
 
 /* Element */
